fix: footer on mobile

--- a/apps/platform-app/src/components/landing-page/LandingFooter/LandingFooter.module.scss
+++ b/apps/platform-app/src/components/landing-page/LandingFooter/LandingFooter.module.scss
@@ -15,7 +15,11 @@
   max-width: 1240px;
   margin: 0 auto;
 }
-
+.mobileHide {
+  @include mobile {
+    display: none;
+  }
+}
 .topBar,
 .bottomBar {
   display: flex;
@@ -39,10 +43,11 @@
 .contact,
 .terms {
   display: flex;
-  flex-direction: column;
+  
   align-items: flex-start;
   gap: 40px;
   @include mobile {
+    flex-direction: column;
     gap: 30px;
   }
 }
